2012-02-25  Borut Razem  <borutr@users.sourceforge.net>
  * lkr/*.lkr, header/*.inc: fixed *.inc and *.lkr files svn properties

2012-02-24  Borut Razem  <borutr@users.sourceforge.net>
  * lkr/Makefile.sh: let replaced with expr
  * lkr/Makefile.am, lkr/Makefile.in: regenarated,
    fixed bug #3487822: Error during compiling the source of gputils
  * libgputils/gpprocessor.c, header/p16lf720.inc, header/p16lf721.inc,
    header/p16f720.inc, header/p16f721.inc,
    lkr/16f720_g.lkr, lkr/16lf720_g.lkr,
    lkr/16f721_g.lkr, lkr/16lf721_g.lkr: added

2012-01-01  Borut Razem  <borutr@users.sourceforge.net>
  * libgputils/gpprocessor.c, lkr/*:
    sync existing 10x, 12x and changed 16x devices with
    MPLAB X IDE v1.00, mpasmx 5.42

2012-01-01  Borut Razem  <borutr@users.sourceforge.net>
  * libgputils/gpwriteobj.c, gpasm/directive.c:
    fixed .dim directive handling
  * gpasm/testsuite/gpasm.project/objfiles/dim.o:
    updated for Microchip COFF version 2
  * doc/gputils.lyx: fixed .dim length depending on COFF cersion

2011-12-31  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/lst.c, libgputils/gpmemory.c, libgputils/gpmemory.h:
    properly count program memory usage: exclude config words for
    non-pic16 devices
  * gpasm/evaluate.c: untabification
  * gpasm/coff.c: don't emit undefined config words id they are outside
    the defined block; mask emitted config words with core_size. This
    probably fixes the bug #3373747: gpasm/gplink not working for
    pic16f88 since 0.13.5
  * gpasm/directive.c: removed unnecessary returns
  * gpasm/gpasm.c, doc/gputils.lyx:
    use the new Microchip COFF format by default
  * libgputils/gpprocessor.h, gpasm/directive.c, gpasm/parse.y,
    gpasm/lst.c, gpasm/processor.c, gpasm/evaluate.c, gpasm/coff.c:
    _16bit_core replaced by IS_16BIT_CORE
  * doc/gputils.lyx, gpasm/gperror.c, gpasm/gperror.h:
    updated errors, warnings and messages

2011-12-28  Borut Razem  <borutr@users.sourceforge.net>