@@ -17,17 +17,17 @@ rm -f header_check
 gcc -Wall -pedantic -g -O2 -I../include -o header_check header_check.c
 
 # count the number of items in the list
-let count=0
+count=0
 for x in *.inc
   do
-    let count=count+1
+    count=$(expr $count + 1)
   done
 
 # output the file list
-let number=0
+number=0
 for x in *.inc
   do
-    let number=number+1
+    number=$(expr $number + 1)
     echo "testing $x"
     ./header_check $x
     if [ $number -eq $count ]; then
