@@ -1,4 +1,9 @@
 2012-02-25  Borut Razem  <borutr@users.sourceforge.net>
+  * header/Makefile.sh: let replaced with expr
+  * header/Makefile.am, header/Makefile.in: regenarated;
+    thanks to Raphael Neider
+
+2012-02-25  Borut Razem  <borutr@users.sourceforge.net>
   * lkr/*.lkr, header/*.inc: fixed *.inc and *.lkr files svn properties
 
 2012-02-24  Borut Razem  <borutr@users.sourceforge.net>
